Kullanıcı giriş sayfaaları oluşturuldu.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -124,8 +124,8 @@ strong {
     <p><strong>Sen de ister oku, ister yaz. Çünkü bu dünya senin kelimelerinle daha da zengin.</strong></p>
 
     <div class="button-container">
-        <a href="register.html" class="btn">Kayıt Ol</a>
-        <a href="login.html" class="btn btn-secondary">Giriş Yap</a>
+        <a href="/register" class="btn">Kayıt Ol</a>
+        <a href="/login" class="btn btn-secondary">Giriş Yap</a>
     </div>
 
 
