Yeni gönderi ekleme ekranı güncellendi.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -101,7 +101,7 @@ strong {
   </style>
 </head>
 <body>
-  <div class="container">
+  < class="container">
     <h1>Kelimelik’e Hoş Geldin! ✨</h1>
     <h2>Tek bir site, yüzlerce konu, binlerce kelime…</h2>
 
@@ -127,8 +127,10 @@ strong {
         <a href="/register" class="btn">Kayıt Ol</a>
         <a href="/login" class="btn btn-secondary">Giriş Yap</a>
     </div>
-
-
+  
+      <footer style="text-align: center; padding: 1rem; background-color: #C9ADA7; color: #fff;">
+    <p>&copy; 2025 Kelimelik. Tüm hakları saklıdır.</p>
+  </footer>
 
 </body>
 </html>
