--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -158,7 +158,7 @@ body {
 
   <!-- Navbar -->
   <nav class="navbar">
-    <div class="logo">KelimeLik</div>
+    <div class="logo">Kelimelik</div>
     <ul class="nav-links">
       <li><a href="main">Anasayfa</a></li>
       <li><a href="newpost">Yeni Yazı Ekle</a></li>
@@ -177,27 +177,21 @@ body {
     <button class="category-btn">Eğitim</button>
     <button class="category-btn">Sağlık</button>
   </section>
+<main class="blog-list">
+  {{range .}}
+  <article class="blog-card">
+    <h2>{{.Title}}</h2>
+    <p>{{slice .Content 0 200}}...</p>
+    <a href="/post/{{.ID}}" class="read-more">Devamını Oku →</a>
+  </article>
+  {{end}}
+</main>
+</main>
 
-
-  <main class="blog-list">
-    <article class="blog-card">
-      <h2>Hücreler Neden Yuvarlaktır ve Bölünerek Çoğalırlar?</h2>
-      <p>Canlılığın en temel yapıtaşı olan hücrelerin yuvarlak olma davranışını/eğilimini anlamak için, canlılığın kökenlerine inmemiz gerekiyor. Canlılığın başlangıcına... Yani, "cansız" olarak tanımladığımız kavramların, belirli çevre şartları altında kademeli değişerek "canlı" olarak tanımlayacağımız kavramların ortaya çıkışına... Bunu inceleyen teori, Evrim Teorisi değil, Abiyogenez Teorisi'dir.</p>
-      <a href="#" class="read-more">Devamını Oku →</a>
-    </article>
-
-    <article class="blog-card">
-      <h2>Love, Death&Robots İnceleme</h2>
-      <p>Black Mirror'dan sonra Netflix tarafından yapılan en iyi antoloji dizisi olabilir. Genelde bu tarz biçime dayalı eserlerde bazı bölümler kalitesiz olabilir ve diğer iyi bölümlerin altında kalabilir. Ama Love, Death + Robots'ta ben böyle bir bölüm hatırlamıyorum. Her bölümü eşsiz ve güzeldi. Animasyonların sürekli farklılaşması, tek bir düzende gidilmemesi, sürekli olarak Bilim Kurgudan ilerlenmemesi ve bizi şaşırtacak çok fazla özelliğinin olması, bu diziyi izlenir kılan güzel özelliklerdi.</p>
-      <a href="#" class="read-more">Devamını Oku →</a>
-    </article>
-
-    <article class="blog-card">
-      <h2>Umman'da İslam Öncesine Ait 2400 Yıllık Zufar Yazısı Deşifre Edildi!</h2>
-      <p>Umman’ın Dhofar bölgesindeki mağaraların taş yüzeylerinde ve kurumuş nehir yataklarının yüzeylerinde yılan gibi kıvrılarak kayanın üzerine işlenmiş neredeyse 2400 yıl öncesine ait yazılar bulunuyordu. "Zufar yazısı" olarak da bilinen bu yazının ne olduğu ise uzun yıllar boyunca bilim insanları için çözülemeyen bir bilmeceydi. Ancak uluslararası bir akademik dergide yayımlanmak üzere olan yeni bir çalışmanın yazarı, Zufar yazısının ana alt türünü deşifre ettiğini ve alfabenin Güney Arabistan'da ortaya çıkmadığına dair kanıtlar bulduğunu öne sürüyor.</p>
-      <a href="#" class="read-more">Devamını Oku →</a>
-    </article>
-  </main>
+  <!-- Footer -->
+  <footer style="text-align: center; padding: 1rem; background-color: #C9ADA7; color: #fff;">
+    <p>&copy; 2025 Kelimelik. Tüm hakları saklıdır.</p>
+  </footer>
 
 </body>
 </html>
