Şifremi unuttum bölümü eklendi.

--- a/templates/login.html
+++ b/templates/login.html
@@ -119,6 +119,7 @@ button[type="submit"]:hover {
         <div class="action-group">
             <button type="submit">Giriş Yap</button>
             <p>Hesabınız yok mu? <a href="/register">Buradan kayıt olun.</a>.</p>
+            <p> <a href="/smtp">Şifrenizi unuttunuz mu?</a></p>
         </div>
     </form>
 
