--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>KelimeLik - Anasayfa</title>
+  <title>Kelimelik - Anasayfa</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet" />
-  <link rel="stylesheet" href="anasayfa.css" />
 </head>
 <style>
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap');
@@ -18,7 +17,6 @@ body {
   min-height: 100vh;
 }
 
-/* Navbar */
 
 .navbar {
   background-color: #fff;
