Profil bölümü eklendi.

--- a/templates/mainpage.html
+++ b/templates/mainpage.html
@@ -17,7 +17,7 @@ body {
   min-height: 100vh;
 }
 
-
+/* navbar */
 .navbar {
   background-color: #fff;
   padding: 1rem 2rem;
@@ -158,10 +158,10 @@ body {
   <nav class="navbar">
     <div class="logo">Kelimelik</div>
     <ul class="nav-links">
-      <li><a href="main">Anasayfa</a></li>
-      <li><a href="newpost">Yeni Yazı Ekle</a></li>
-      <li><a href="#">Profil</a></li>
-      <li><a href="logout">Çıkış</a></li>
+      <li><a href="/main">Anasayfa</a></li>
+      <li><a href="/newpost">Yeni Yazı Ekle</a></li>
+      <li><a href="/profile">Profil</a></li>
+      <li><a href="/logout">Çıkış</a></li>
     </ul>
   </nav>
 
