--- a/templates/smtp.html
+++ b/templates/smtp.html
@@ -107,7 +107,7 @@ button[type="submit"]:hover {
 
 </style>
 <body>
-    <h1 class="page-title">Sifre Sıfırlama</h1> 
+    <h1 class="page-title">Şifre Sıfırlama</h1> 
 
     <form method="POST" action="/smtp">
         <label for="email">E-posta:</label><br>
