Son iyileştirmeler yapıldı.

--- a/templates/homepage.html
+++ b/templates/homepage.html
@@ -345,8 +345,8 @@
 
     <div class="footer-section">
       <h4>Adres</h4>
-      <p>İstanbul, Türkiye</p>
-      <p>+90 555 123 45 67</p>
+      <p>Denizli, Türkiye</p>
+      <p>+90 555 258 20 20</p>
       <p>info@kelimelik.com</p>
     </div>
 
